--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "front-cloud-camp-test",
   "version": "0.1.0",
+  "homepage": "https://millylu.github.io/frontCloudCamp_test",
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^18.2.5",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
@@ -29,6 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
